samples/modernbank/networking/default/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account
spec:
  hosts:
  - account
  http:
  - route:
    - destination:
        host: account
        subset: v1
      weight: 100
    - destination:
        host: account
        subset: v2
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-mongo
spec:
  hosts:
  - account-mongo
  http:
  - route:
    - destination:
        host: account-mongo
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
spec:
  hosts:
  - user
  http:
  - route:
    - destination:
        host: user
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-mongo
spec:
  hosts:
  - user-mongo
  http:
  - route:
    - destination:
        host: user-mongo
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transaction
spec:
  hosts:
  - transaction
  http:
  - route:
    - destination:
        host: transaction
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transaction-log
spec:
  hosts:
  - transaction-log
  http:
  - route:
    - destination:
        host: transaction-log
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transaction-log-mongo
spec:
  hosts:
  - transaction-log-mongo
  http:
  - route:
    - destination:
        host: transaction-log-mongo
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui
spec:
  hosts:
  - ui
  http:
  - route:
    - destination:
        host: ui
        subset: v1
